HW18 update, push.yml, setup.py

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -40,7 +40,7 @@ jobs:
         # Note: the following commands have three entirely different instances
         # of the "-m" flag. These are positionally required!
         echo "[pwd]: ${PWD}"
-        export PYTHONPATH=$PWD/suny485
+        export PYTHONPATH=$PWD/csc485
         echo "[pythonpath]: ${PYTHONPATH}"
         echo "!! run pytest and exclude any live API tests !!"
         coverage run -m pytest -m 'not live_api' --tb=short
